--- a/lesson-3/homework/zzz.ipynb
+++ b/lesson-3/homework/zzz.ipynb
@@ -27,17 +27,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 's', 's', '_', 'a', 'l', '_', 'o', 'm']\n"
+     ]
+    }
+   ],
    "source": [
-    "import random\n",
-    "x=random.randrange(0,100)\n",
-    "y=int(input(\"Guess: \"))\n",
-    "guess=False\n",
-    "if x!=y:\n",
-    "    y=int(input(\"Guess again: \"))\n",
-    "else: print(\"Corect\")"
+    "txt=str(input(\"Enter the text: \"))\n",
+    "vowels=\"aeouiAEUIO\"\n",
+    "txt=list(txt)\n",
+    "count=0\n",
+    "for i in range(len(txt)):\n",
+    "    if i%3==0 and i!=0 and txt[i] in vowels:\n",
+    "        txt.insert(i,\"_\")\n",
+    "        if i==len(txt):\n",
+    "            txt[i]=txt[i]\n",
+    "    elif i%3==0 and txt[i] not in vowels:\n",
+    "        txt.insert(i,\"_\")\n",
+    "print(txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object <genexpr> at 0x10ca826c0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x={'name':\"jahongir\", 'lname':\"Abdirashitov\", 'age':18}\n",
+    "a=(print(i) for i in x for y in i)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jahongir\n",
+      "Abdirashitov\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "x={'name':\"jahongir\", 'lname':\"Abdirashitov\", 'age':18}\n",
+    "for i in x:\n",
+    "    i=str(i)\n",
+    "    print(x[i])"
    ]
   },
   {
